# BaseAgent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Future_Roadmap.md  LICENSE  Multi_Agent_Future_Roadmap.md  README.md  alzkb.ipynb  cardiokb.ipynb  main.py  multi-agent-plan.md  pyproject.toml
.github/workflows/: ci.yml
BaseAgent/: README.md  __init__.py  agent_spec.py  base_agent.py  config.py  env_desc.py  errors.py  events.py  llm.py  nodes.py  prompts.py  resource_manager.py  resources.py  retriever.py  state.py  utils.py
BaseAgent/multi_agent/: __init__.py  orchestrator.py  state.py
BaseAgent/tests/: README_TESTS.md  conftest.py  pytest.ini  test_add_mcp.py  test_add_tool.py  test_agent_spec.py  test_async_api.py  test_checkpointing.py  test_config_termination.py  test_context_window.py  test_errors.py  test_events.py  test_examples_streaming_persistence.py  test_extract_subgraph.py  test_hybrid_schema.py  test_integration.py  test_interrupt_resume.py  test_llm_providers.py  test_llm_usage_metrics.py  test_mcp_config.yaml  test_mcp_integration.py  test_mcp_overhaul.py  test_mcp_unit.py  test_multi_agent.py  test_nodes.py  test_repl_isolation.py  test_resource_manager.py  test_retriever.py  test_skills.py  test_stream_logging.py  test_utils_download.py  test_utils_formatting.py  test_utils_schema.py
BaseAgent/tests/helpers/: node_helpers.py
BaseAgent/tools/: __init__.py  support_tools.py
BaseAgent/utils/: __init__.py  download.py  execution.py  formatting.py  schema.py  tool_bridge.py
config/: ista_mapping.yaml  ontology_mappings.yaml
docs/: baseagent_source_schema_latest.html  baseagent_source_schema_template.html  build_latest_schema.py
examples/: 01_basic_usage.py  02_custom_tools.py  03_mcp_servers.py  04_resource_management.py  04_resources_and_retrieval.py  05_custom_configuration.py  06_agent_identity.py  06_tool_retrieval.py  07_human_in_the_loop.py  07_skills.py  08_human_in_the_loop.py  09_async_and_streaming.py  09_repl_isolation.py  10_error_handling.py  10_extract_subgraph.py  10_skills.py  11_error_handling.py  11_multi_agent.py  12_async_api.py  12_persistence.py  13_disease_kg.py  13_multi_agent.py  15_streaming.py  16_persistence.py  README.md  mcp_config.yaml
examples/skills/data-analyst/: SKILL.md
examples/skills/database_agent_protocol/: SKILL.md
examples/skills/mapping_agent_protocol/: SKILL.md
examples/skills/memgraph_agent_protocol/: SKILL.md
examples/skills/oncology_agent_protocol/: SKILL.md
examples/skills/ontology-mapper/: SKILL.md
examples/skills/ontology-mapper/references/: owl_primer.md
examples/skills/report-writer/: SKILL.md
examples/skills/software_engineer_agent_protocol/: SKILL.md
frontend/: README.md  index.html  server.py
scripts/: load_csvs_to_memgraph.py
skills/database-protocol/: SKILL.md
skills/database-protocol/references/: aopdb.md  bgee.md  bindingdb.md  collectri.md  disease_ontology.md  disgenet.md  drugbank.md  drugcentral.md  drugcentral_eval.json  evolutionary_rate_covariation.md  gene_ontology.md  hpo.md  medline.md  mesh.md  mondo.md  ncbigene.md  pubtator3.md  reactome.md  sider.md  string.md  uberon.md
skills/evaluation-protocol/: SKILL.md
skills/evaluation-protocol/references/: eval_metrics.json  eval_metrics.md
skills/hitl-protocol/: SKILL.md  hitl-protocol.skill
skills/hitl-protocol/scripts/: ask_user.py
skills/mapping-protocol/: SKILL.md
skills/mapping-protocol/references/: entry_format.md
skills/memgraph-protocol/: SKILL.md
skills/ontology-protocol/: SKILL.md
skills/ontology-protocol/references/: project_yaml_format.md
skills/ontology-protocol/scripts/: _ontology_utils.py  edit_ontology.py  inspect_ontology.py
skills/parser-protocol/: SKILL.md
skills/parser-protocol/references/: eval_guide.md
skills/supervisor-protocol/: SKILL.md
skills/supervisor-protocol/references/: cli_and_outputs.md  module_apis.md
src/export/: tsv_exporter.py
src/parsers/: clinicaltrials_parser.py  parse_disease_ontology.py
template/: .env.example  README.md  eval_report.json  run.sh
template/config/: databases.yaml  ontology_mappings.yaml  project.yaml  project.yaml.example
template/data/ontology/: ontology.rdf
template/eval/: eval_after_memgraph.py  eval_after_ontology.py  eval_after_parser.py
template/hpc/: node2vec_job.slurm  train_node2vec.py
template/ml/: export_edges.py  train_node2vec.py
template/scripts/: load_ctd_treats.py  load_missing_edges.py  load_treats_edges.py
template/src/: __init__.py  condition_normalizer.py  config_loader.py  generate_disease_slim.py  id_mappings.py  main.py
template/src/export/: memgraph_exporter.py
template/src/ontology/: populator.py
template/src/parsers/: __init__.py  clinicaltrials_parser.py  clinpgx_parser.py  clinvar_parser.py  ctd_chemical_parser.py  ctd_exposure_parser.py  ctd_parser.py  disease_ontology_parser.py  drugcentral_parser.py  hpo_parser.py  medline_parser.py  mondo_parser.py
