[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseagent"
version = "0.1.0"
description = "A flexible and extensible agent framework built on LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "BaseAgent Contributors"}
]
keywords = ["agent", "langchain", "langgraph", "llm", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "langchain-core>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "nest-asyncio>=1.5.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Provider-specific optional dependencies
openai = ["langchain-openai>=1.0.2"]
anthropic = ["langchain-anthropic>=0.1.0"]
google = ["langchain-google-genai>=1.0.0"]
aws = ["langchain-aws>=0.1.0"]
groq = ["langchain-groq>=0.1.0"]
ollama = ["langchain-ollama>=0.1.0"]
azureai = ["langchain-azure-ai>=1.0.0"]

# All providers
all = [
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-aws>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-azure-ai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/BinglanLi/BaseAgent"
Repository = "https://github.com/BinglanLi/BaseAgent"
Documentation = "https://github.com/BinglanLi/BaseAgent#readme"
"Bug Tracker" = "https://github.com/BinglanLi/BaseAgent/issues"

[tool.setuptools]
packages = ["BaseAgent", "BaseAgent.tools", "BaseAgent.tools.tool_description", "BaseAgent.tests"]

[tool.setuptools.package-data]
BaseAgent = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo"]

[tool.pytest.ini_options]
testpaths = ["BaseAgent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
]
