[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseagent"
version = "0.1.0"
description = "A flexible and extensible agent framework built on LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "BaseAgent Contributors"}
]
keywords = ["agent", "langchain", "langgraph", "llm", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "langchain-core>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "nest-asyncio>=1.5.0",
    "mcp>=1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "rdflib>=7.6.0",
    "langchain-openai>=1.0.2",
    "langchain-anthropic>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Provider-specific optional dependencies
google = ["langchain-google-genai>=1.0.0"]
aws = ["langchain-aws>=0.1.0"]
groq = ["langchain-groq>=0.1.0"]
ollama = ["langchain-ollama>=0.1.0"]
azureai = ["langchain-azure-ai>=1.0.0"]

# All providers
all = [
    "langchain-google-genai>=1.0.0",
    "langchain-aws>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-azure-ai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/BinglanLi/BaseAgent"
Repository = "https://github.com/BinglanLi/BaseAgent"
Documentation = "https://github.com/BinglanLi/BaseAgent#readme"
"Bug Tracker" = "https://github.com/BinglanLi/BaseAgent/issues"

[tool.setuptools]
packages = ["BaseAgent", "BaseAgent.tools", "BaseAgent.tools.tool_description", "BaseAgent.tests"]

[tool.setuptools.package-data]
BaseAgent = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo"]

[tool.pytest.ini_options]
testpaths = ["BaseAgent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
]
kg = [
    "biopython>=1.81",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.2",
    "owlready2>=0.43",
    "rdflib>=6.3.0",
    "obonet>=0.3.0",
    "pronto>=2.5.0",
    "requests-cache>=1.0.0",
    "mysql-connector-python>=8.0.33",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "pyreadr>=0.5.0",
    "playwright>=1.40.0",
    "remotezip>=0.12.0",
    "psycopg2>=2.9.0",
]
